--- a/style.css
+++ b/style.css
@@ -738,9 +738,14 @@
   }
   * body .container .blog_section_id .blog_section_class .blog_circles .blog_button {
     display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #00313E;
     width: 80vw;
     height: 40vw;
+  }
+  * body .container .blog_section_id .blog_section_class .blog_circles .blog_button .blog_circle {
+    z-index: 1;
   }
   * body .container .blog_section_id .blog_section_class .blog_circles .blog_button .blog_circle .back_blog {
     background-color: #146166;
@@ -762,6 +767,17 @@
     color: white;
     position: absolute;
     border-radius: 50%;
+  }
+  * body .container .blog_section_id .blog_section_class .blog_circles .blog_button .tag_one {
+    width: 60vw;
+    height: 20vw;
+    background-color: #080E2F;
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 0 -10vw;
   }
 }
 @media only screen and (orientation: landscape) {
@@ -1499,7 +1515,7 @@
   * body .container .blog_section_id .blog_section_class {
     display: flex;
     flex-direction: column;
-    height: 200vh;
+    height: 210vh;
     background-color: #00313E;
   }
   * body .container .blog_section_id .blog_section_class .section_title {
@@ -1514,6 +1530,35 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    margin: 10vh 0 0 0;
+    gap: 5vh;
+  }
+  * body .container .blog_section_id .blog_section_class .blog_circles .blog_button {
+    display: flex;
+    background-color: #00313E;
+    width: 80vw;
+    height: 25vw;
+  }
+  * body .container .blog_section_id .blog_section_class .blog_circles .blog_button .blog_circle .back_blog {
+    background-color: #146166;
+    width: 23vw;
+    height: 23vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #080E2F;
+    border-radius: 50%;
+  }
+  * body .container .blog_section_id .blog_section_class .blog_circles .blog_button .blog_circle .back_blog .front_blog {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #080E2F;
+    width: 20vw;
+    height: 20vw;
+    color: white;
+    font-size: 2vw;
+    position: absolute;
+    border-radius: 50%;
   }
 }/*# sourceMappingURL=style.css.map */
