--- a/style.scss
+++ b/style.scss
@@ -829,11 +829,14 @@ $jobdescription: #00C6C3;
                             height: 80vh;
                             .blog_button {
                                 display: flex;
+                                justify-content: center;
+                                align-items: center;
                                 background-color: $nextgreen;
                                 // border: none;
                                 width: 80vw;
                                 height: 40vw;
                                 .blog_circle {
+                                    z-index: 1;
                                     .back_blog {
                                         background-color: $skillsteal;
                                         width: 40vw;
@@ -855,6 +858,17 @@ $jobdescription: #00C6C3;
                                             border-radius: 50%;
                                         }
                                     }
+                                }
+                                .tag_one {
+                                    width: 60vw;
+                                    height: 20vw;
+                                    background-color: $darkblue;
+                                    border-radius: 5px;
+                                    color: white;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    margin: 0 0 0 -10vw;
                                 }
                             }
                         }
@@ -1664,7 +1678,7 @@ $jobdescription: #00C6C3;
                     .blog_section_class {
                         display: flex;
                         flex-direction: column;
-                        height: 200vh;
+                        height: 210vh;
                         background-color: $nextgreen;
                         .section_title {
                             margin: 5vh 0 0 10vw;
@@ -1679,7 +1693,40 @@ $jobdescription: #00C6C3;
                             flex-direction: column;
                             justify-content: center;
                             align-items: center;
-                            height: 80vh;
+                            margin: 10vh 0 0 0;
+                            gap: 5vh;
+                            // height: 80vh;
+                            .blog_button {
+                                display: flex;
+                                background-color: $nextgreen;
+                                // border: none;
+                                width: 80vw;
+                                height: 25vw;
+                                .blog_circle {
+                                    .back_blog {
+                                        background-color: $skillsteal;
+                                        width: 23vw;
+                                        height: 23vw;
+                                        display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                        border: 2px solid $darkblue;
+                                        border-radius: 50%;
+                                        .front_blog {
+                                            display: flex;
+                                            justify-content: center;
+                                            align-items: center;
+                                            background-color: $darkblue;
+                                            width: 20vw;
+                                            height: 20vw;
+                                            color: white;
+                                            font-size: 2vw;
+                                            position: absolute;
+                                            border-radius: 50%;
+                                        }
+                                    }
+                                }
+                            }
                         }
                     }
                 }
